Load parameters for camera intrinsics and distortions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,8 +19,7 @@ include_directories(
 add_library(${PROJECT_NAME} SHARED
         orb_extractor.cpp
         slam_system.cpp dataset_loader.cpp
-        dataset_loader.h
-        ground_truth.cpp ground_truth.h math_utils.h)
+        ground_truth.cpp)
 
 target_link_libraries(${PROJECT_NAME}
         ${OpenCV_LIBS}
