Refactor calculation of F and H into CameraMotionEstimator

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library(${PROJECT_NAME} SHARED
         slam_core.cpp
         orb_extractor.cpp
         slam_system.cpp dataset_loader.cpp
-        ground_truth.cpp cv_utils.cpp orb_feature_matcher.cpp transfer_error.cpp transfer_error.h)
+        ground_truth.cpp cv_utils.cpp orb_feature_matcher.cpp transfer_error.cpp transfer_error.h camera_motion_estimator.cpp camera_motion_estimator.h homogeneous_matrix.h homography_motion_estimator.cpp epipolar_constraint_motion_estimator.cpp)
 
 target_link_libraries(${PROJECT_NAME}
         ${OpenCV_LIBS}
