Implement basics of bundle adjustment

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(${PROJECT_NAME} SHARED
         orb_extractor.cpp
         slam_system.cpp dataset_loader.cpp
         ground_truth.cpp cv_utils.cpp orb_feature_matcher.cpp
-        transfer_error.cpp transfer_error.h camera_motion_estimator.cpp camera_motion_estimator.h homogeneous_matrix.h homography_motion_estimator.cpp epipolar_constraint_motion_estimator.cpp homogeneous_matrix.cpp stamped_transformation.h eigen_utils.h eigen_utils.cpp epipolar_constraint_motion_estimator.h homography_motion_estimator.h projective_transformation.cpp projective_transformation.h plausible_transformation.cpp plausible_transformation.h initializer.cpp initializer.h viewer.cpp viewer.h viewer_settings.h)
+        transfer_error.cpp transfer_error.h camera_motion_estimator.cpp camera_motion_estimator.h homogeneous_matrix.h homography_motion_estimator.cpp epipolar_constraint_motion_estimator.cpp homogeneous_matrix.cpp stamped_transformation.h eigen_utils.h eigen_utils.cpp epipolar_constraint_motion_estimator.h homography_motion_estimator.h projective_transformation.cpp projective_transformation.h plausible_transformation.cpp plausible_transformation.h initializer.cpp initializer.h viewer.cpp viewer.h viewer_settings.h bundle_adjustment.cpp bundle_adjustment.h)
 
 target_link_libraries(${PROJECT_NAME}
         ${OpenCV_LIBS}
