--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(${PROJECT_NAME} SHARED
         orb_extractor.cpp
         slam_system.cpp dataset_loader.cpp
         ground_truth.cpp cv_utils.cpp orb_feature_matcher.cpp
-        transfer_error.cpp transfer_error.h camera_motion_estimator.cpp camera_motion_estimator.h homogeneous_matrix.h homography_motion_estimator.cpp epipolar_constraint_motion_estimator.cpp homogeneous_matrix.cpp stamped_transformation.h eigen_utils.h eigen_utils.cpp epipolar_constraint_motion_estimator.h homography_motion_estimator.h projective_transformation.cpp projective_transformation.h plausible_transformation.cpp plausible_transformation.h viewer.cpp viewer.h settings.h bundle_adjustment.cpp bundle_adjustment.h octave_scales.cpp octave_scales.h optimizer.cpp optimizer.h slam_state_machine.cpp slam_state_machine.h key_frame.cpp key_frame.h ioc_factory.cpp ioc_factory.h undistorted_image_boundary.cpp undistorted_image_boundary.h bound.cpp bound.h cv_algorithms.cpp cv_algorithms.h)
+        transfer_error.cpp transfer_error.h camera_motion_estimator.cpp camera_motion_estimator.h homogeneous_matrix.h homography_motion_estimator.cpp epipolar_constraint_motion_estimator.cpp homogeneous_matrix.cpp stamped_transformation.h eigen_utils.h eigen_utils.cpp epipolar_constraint_motion_estimator.h homography_motion_estimator.h projective_transformation.cpp projective_transformation.h plausible_transformation.cpp plausible_transformation.h viewer.cpp viewer.h settings.h bundle_adjustment.cpp bundle_adjustment.h octave_scales.cpp octave_scales.h optimizer.cpp optimizer.h key_frame.cpp key_frame.h ioc_factory.cpp ioc_factory.h undistorted_image_boundary.cpp undistorted_image_boundary.h bound.cpp bound.h cv_algorithms.cpp cv_algorithms.h)
 
 target_link_libraries(${PROJECT_NAME}
         ${OpenCV_LIBS}
@@ -31,3 +31,8 @@ target_link_libraries(${PROJECT_NAME}
         ${PROJECT_SOURCE_DIR}/third_party/DBoW2/lib/libDBoW2.so
         g2o
         )
+target_include_directories(
+        ${PROJECT_NAME}
+        PUBLIC
+        ${PROJECT_SOURCE_DIR}/third_party
+)
